jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-deployment
  labels:
    app: jellyfin

spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin

  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            - name: jellyfin-data
              mountPath: /config
            - name: jellyfin-data
              mountPath: /cache
            - name: jellyfin-data
              mountPath: /data
      volumes:
      - name: jellyfin-data
        persistentVolumeClaim:
          claimName: jellyfin-pvc
