jellyfin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
spec:
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
